--- a/style.css
+++ b/style.css
@@ -235,9 +235,9 @@ a{text-decoration: none;}
 }
 
 
-.ourteam .name-1,
+/* .ourteam .name-1,
 .ourteam .name-2,
-.ourteam .name-3{filter: drop-shadow(1px 1px 2px #555);}
+.ourteam .name-3{filter: drop-shadow(1px 1px 2px #555);} */
 
 
 
@@ -376,6 +376,351 @@ a{text-decoration: none;}
     grid-column: 1;
     grid-row: 12 / 15;
 }  
+
+
+
+/* Service */
+/* service main */
+
+.service{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.service .row-1,
+.service .row-2{
+    margin: 40px;
+}
+
+.service .row-1{
+    width: 400px;
+    height: auto;
+}
+
+.service .row-1 #paragraph-service{
+    font-size: 45px;
+    line-height: 45px;
+    margin-bottom: 30px;
+}
+
+.service .row-1 {
+    font-size: 18px;
+}
+
+.service .row-1 button{
+    padding: 12px 30px;
+    margin-top: 130px;
+    border: 1px #a7a7a7 solid;
+    font-size: 15px;
+    background-color: #fff;
+    color: #3a3a3a;
+}
+
+.service .row-1 button:hover{
+    background-color: #a9a0a0;
+    cursor: pointer;
+}
+
+.service .row-2 img{
+    max-width: 600px;
+    max-height: 600px;
+}
+
+.text-price .container-price{
+    text-align: center;
+    margin:auto;
+    inline-size: 65%;
+    width: 850px;
+}
+
+.text-price .container-price h1{
+    font-size: 75px;
+    margin-bottom: 35px;
+    color: #4b4b4b;
+}
+
+.text-price .container-price .text-1{
+    color: #4b4b4b;
+    margin-bottom: 20px;
+}
+
+.text-price .container-price .text-2{color: #4b4b4b;}
+
+.video-price{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.video-price .text-video {
+    width: 400px;
+    margin: 80px 40px;
+}
+
+.video-price .text-video h1{
+    font-size: 65px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+    border-bottom: 3px #d6aa09fd solid;
+}
+
+.video-drone{
+    height: 330px !important;
+    width: 520px !important;
+    box-shadow: 0 0 20px 7px #737373;
+}  
+
+.book{
+    margin-top: 100px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.book .book-cards .first-image{background-image: url("./poze/card-s1.jpg" );}
+
+.book .book-cards .second-image{background-image: url("./poze/card-s2.jpg" );}
+
+.book .book-cards .three-image{background-image: url("./poze/slider-bg2.png");}
+
+.book .book-cards .first-image,
+.book .book-cards .second-image,
+.book .book-cards .three-image{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: scroll;
+    background-size: cover;
+    width: 320px;
+    height: 300px;
+}
+
+.book .book-cards h3{padding: 30px 0 7px 0;}
+
+.book .book-cards .text-card{
+    color: #646464;
+    padding: 10px 0;
+    font-size: 13px;
+}
+
+.book .book-cards .book-now{
+    background-color: rgb(215, 140, 0);
+    color: #ffffff;
+    padding: 10px 20px;
+    margin: 10px 0 30px 0;
+    border: none;
+}
+
+.book .book-cards .book-now:hover{
+    cursor: pointer;
+    opacity: 0.8;
+}
+
+.book .book-cards {
+   width: 320px;
+   margin: 0 30px;
+   box-shadow: 5px 5px 30px #c5c5c5;
+}
+
+
+.popup .overlay {
+    position:absolute;
+    overflow: auto;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 600vh;
+    background: #ffffff;
+    z-index: 1;
+    display: none;
+    text-align: center;
+}
+
+.popup .content {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    background: #ffffff;
+    z-index: 2;
+    text-align: center;
+}
+
+.popup .close-btn {
+    cursor: pointer;
+    position:absolute;
+    top: 125px; 
+    
+    left: 20px;
+    background: #ffffff;
+    text-align: center;
+}
+
+.popup .close-btn button{
+    border: none;
+    background-color: #ffffff;
+}
+
+.popup .close-btn button:hover{opacity: 0.8;}
+
+.popup .overlay .content .after-image{margin-top: 180px;}
+
+.popup .after-image h1{
+    font-size: 28px;
+    padding:20px;
+}
+
+.popup .after-image p{padding: 20px;}
+
+.popup .after-image .card-price{
+    color: #646464;
+    padding: 20px;
+}
+
+.popup .after-image .card-button1,
+.popup .after-image .card-button2{
+    border: none;
+    background-color: rgb(215, 140, 0);
+    padding: 8px 24px;
+    color: #ffffff;
+}
+
+.popup .product-img1 img{
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    height: 400px;
+    object-fit: cover;
+}
+
+.popup #card-text{
+    width: 500px;
+    margin: 20px auto 20px auto;
+    text-align: center;
+}
+
+.content h3{
+    margin: auto;
+    padding-top: 20px;
+    font-size: 25px;
+    border-top: 2px solid rgb(215, 140, 0);
+    width: 350px;
+
+}
+
+.popup .after-image .card-button2{
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.popup.active .overlay{display: block;}
+
+.popup.active .content{
+    transition: all 300ms ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+/* contact book */
+
+.container-book{
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+}
+
+.container-book .first-page{
+    transform: translateX(7px) rotate(-2deg);
+    background-color: #f4f4f4;
+}
+
+.container-book .second-page{
+    background-color: #ffffff;
+    z-index: 99;}
+
+.first-page,
+.second-page{
+    width: 500px;
+    height: 600px;
+    box-shadow: 5px 5px 20px #727272;
+}
+
+.first-page h1{
+    font-size: 90px;
+    text-align: center;
+    font-weight: bold;
+    width: 400px;
+    margin: auto;
+    line-height: 1.3;
+}
+
+
+.container-book .first-page .contact-adress{
+    text-align: right;
+    position: absolute;
+    bottom: 150px;
+    right: 90px;
+}
+
+.container-book .first-page .contact-adress p{
+    margin-bottom: 20px;
+    width: 230px;
+} 
+
+.container-book .second-page .contact-flex{
+    display: flex;
+    gap:15px;
+}
+
+.container-book .second-page .contact-number,
+.container-book .second-page .contact-textarea{display: flex;}
+
+.container-book .second-page i{
+    display: flex;
+    align-items: center;
+    margin: 30px auto;
+    width: 10px;
+}
+
+.container-book .second-page .contact-flex input,
+.container-book .second-page .contact-number input,
+.container-book .second-page .contact-textarea textarea{
+    border: none;
+    border-bottom: 2px solid #000;
+    padding-bottom: 5px;
+    margin: 20px auto;
+    font-size: 14px;
+    outline: none;
+}
+
+.container-book .second-page .contact-flex input{width: 40%;}
+
+.container-book .second-page .contact-number input,
+.container-book .second-page .contact-textarea textarea{width: 92%;}
+
+.container-book .second-page .contact-textarea textarea{
+    resize: none;
+    height:200px;
+}
+
+.container-book .second-page button{
+    color: #000000;
+    background-color: #ffffff;
+    padding: 15px 30px;
+    margin: auto 20px;
+}
+
+.container-book .second-page button:hover{
+    cursor: pointer;
+    opacity: 0.8;
+}
 
 
 /* button up */
