I made some improvements

--- a/utilitati.css
+++ b/utilitati.css
@@ -212,7 +212,7 @@ a{text-decoration: none;}
 
 .social-media .fa-instagram:hover{color: #da002f;}
 
-.social-media .fa-twitter:hover{color: #00a8fc;}
+.social-media .fa-linkedin:hover{color: #00a8fc;}
 
 .social-media .fa-github:hover{color: #414d53;}
 
