--- a/test.css
+++ b/test.css
@@ -5,30 +5,8 @@
 }
 
 
-.div1{
-    display: flex;
-    position: relative;
-}
 
-.div1 .test1,
-.div1 .test2{
-    margin: 5px;
-    width: 700px;
-    height: 600px;
-    border: 1px solid #000;
-}
-
-.div1 .test1{
-    transform: translateX(7px) rotate(-2deg);
-    z-index: 6;
-}
-
-.div1 .test2{
-    z-index: 3;
-}
-
-
-/* .book{
+.book{
     margin-top: 100px;
     display: flex;
     text-align: center;
@@ -176,7 +154,12 @@
 .popup.active .content{
     transition: all 300ms ease-in-out;
     transform: translate(-50%, -50%) scale(1);
-} */
+} 
+
+.test{
+    height: 1000px;
+    background-color: black;
+}
 
 
 
